<resources>
    <string name="app_name">Chatting Box</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Forget">Forget Password ?</string>
    <string name="New_User">New User?</string>
    <string name="login">Login</string>
    <string name="title_activity_message">Message</string>
    <string name="title_activity_register">Register</string>
    <string name="action_search">Search</string>
    <string name="action_help">Help</string>
    <string name="action_status">Status</string>
    <string name="action_profile">Profile</string>
    <string name="action_account">Account</string>
    <string name="action_notification">Notification</string>
    <string name="action_contacts">Contacts</string>


</resources>
