<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/back_3"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal" >
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fadeScrollbars="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal" />

        <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="20"
                android:hint="@string/username"
                android:id="@+id/editText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:ems="20"
                android:id="@+id/editText2" />

        </android.support.design.widget.TextInputLayout>

        <Button
        android:background="#9363ad"
        android:layout_width="70dp"
        android:layout_height="32dp"
        android:text="@string/login"
        android:id="@+id/login_btn"
        android:onClick="onClick"
        android:textStyle="italic|bold"
        android:textColor="#000000"
        android:layout_marginTop="34dp"
        android:layout_gravity="center_horizontal" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/New_User"
        android:textColor="#000000"
        android:onClick="Register"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Forget"
        android:id="@+id/textView"
        android:onClick=""
        android:textColor="#000000"
        android:layout_gravity="center_horizontal" />



    </LinearLayout>
    </ScrollView>
</RelativeLayout>
